<resources>
   <string name="app_name">RPS Online</string>
   <string name="rps_online" translatable="false">RPS ONLINE</string>
   <string name="username">"Username: "</string>
   <string name="let_s_nplay" translatable="false">LET\'S\nPLAY</string>
   <string name="select_players">Session</string>
   <string name="scoreboard">Scoreboard</string>
   <string name="score_n_a">SCORE: na</string>
   <string name="n_a_n_a" translatable="false">n/a / n/a</string>
   <string name="p1" translatable="false">P1</string>
   <string name="p2" translatable="false">P2</string>
   <string name="login_user_label">Pick a display name</string>
   <string name="login_user_hint">This will appear to everyone</string>
   <string name="login_nextbtn">Let\'s start</string>
   <string name="select_exit">Exit</string>
   <string name="select_setting">Settings</string>
   <string name="select_selectLabel">Choose a player</string>
   <string name="selectplayer_imagedescription">Avatar</string>
   <string name="gameplay_chooseshape">Choose a shape</string>
   <string name="client_sessionlabel">Copy and send to your friend.</string>
</resources>