<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   tools:context=".SelectPlayer">

   <TextView
      android:id="@+id/displayNameLabel"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="24dp"
      android:text="Player"
      android:textAlignment="textStart"
      android:textSize="34sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

   <Button
      android:id="@+id/exitBtn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginBottom="24dp"
      android:text="@string/select_exit"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

   <Button
      android:id="@+id/button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="24dp"
      android:layout_marginBottom="24dp"
      android:text="@string/select_setting"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

   <ScrollView
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginStart="24dp"
      android:layout_marginEnd="24dp"
      android:layout_marginBottom="24dp"
      app:layout_constraintBottom_toTopOf="@+id/button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/selectPlayerLabel"
      app:layout_constraintVertical_bias="0.48">

      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">

         <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playerList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never" />
      </LinearLayout>
   </ScrollView>

   <TextView
      android:id="@+id/selectPlayerLabel"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="24dp"
      android:paddingTop="8dp"
      android:paddingBottom="8dp"
      android:text="@string/select_selectLabel"
      android:textAlignment="center"
      android:textSize="24sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/displayNameLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>